--- a/superconstraints.cabal
+++ b/superconstraints.cabal
@@ -22,7 +22,7 @@ source-repository head
 library
   hs-source-dirs: src
   default-language: Haskell2010
-  other-extensions
+  other-extensions:
     TypeFamilies,
     ConstraintKinds,
     Rank2Types,
@@ -33,14 +33,14 @@ library
     LambdaCase
 
 
-  build-depends: base
-               , constraints
-               , template-haskell
-               , haskell-src-meta
-               , mtl
-               , containers
-               , type-eq
-               , tagged
+  build-depends: base >= 4.9.1 && < 4.10
+               , constraints >= 0.9.1 && < 0.10
+               , template-haskell >= 2.11.1 && < 2.12
+               , haskell-src-meta >= 0.7.0.1 && < 0.8
+               , mtl >= 2.2.1 && < 2.3
+               , containers >= 0.5.7.1 && < 0.6
+               , type-eq >= 0.5 && < 0.6
+               , tagged >= 0.8.5 && < 0.9
   exposed-modules:
     Data.Constraint.Super
 
